--- a/DevApp/app/detail.html
+++ b/DevApp/app/detail.html
@@ -22,7 +22,7 @@
         <a  href="/" class="once-again">在玩一次</a>
     </footer>
     <footer class="then-info">
-        <i class="then-logo"></i><strong>然后</strong><span>好玩的故事接龙</span>
+        <i class="then-logo"></i><strong>然后</strong><span>故事才刚刚开始</span>
         <a class="download" href="">下载</a>
     </footer>
     <!-- <div class="cover"></div> -->
