--- a/DevApp/app/index.html
+++ b/DevApp/app/index.html
@@ -12,27 +12,30 @@
 </head>
 
 <body>
-	<p class="header"><img src="./images/headerFont.png" alt="" class="headerFont"></p>
-	<div class="container">
-		<p>
-			<img src="images/bg.png" alt="">
-			<img src="images/bg.png" alt="">
-			<img src="images/bg.png" alt="">
-		</p>
-		<p>
-			<img src="images/bg.png" alt="">
-			<img src="images/bg.png" alt="">
-			<img src="images/bg.png" alt="">
-		</p>
-		<p>
-			<img src="images/bg.png" alt="">
-			<img src="images/bg.png" alt="">
-			<img src="images/bg.png" alt="">
-		</p>
-	</div>
-	<p class="refresh"><button class="refresh-btn">给我刷新</button></p>
-	<p class="foot"><img src="./images/footFont.png" alt="" class="footFont"></p>
-	<script type="text/javascript" src="dist/zepto.entry.js"></script>
+    <img src="images/share.png" style="position: absolute;z-index: -1;visibility: hidden;" />
+    <p class="header"><img src="./images/headerFont.png" alt="" class="headerFont"></p>
+    <div class="container">
+        <p>
+            <img src="images/bg.png" alt="">
+            <img src="images/bg.png" alt="">
+            <img src="images/bg.png" alt="">
+        </p>
+        <p>
+            <img src="images/bg.png" alt="">
+            <img src="images/bg.png" alt="">
+            <img src="images/bg.png" alt="">
+        </p>
+        <p>
+            <img src="images/bg.png" alt="">
+            <img src="images/bg.png" alt="">
+            <img src="images/bg.png" alt="">
+        </p>
+    </div>
+    <p class="refresh">
+        <button class="refresh-btn">给我刷新</button>
+    </p>
+    <p class="foot"><img src="./images/footFont.png" alt="" class="footFont"></p>
+    <script type="text/javascript" src="dist/zepto.entry.js"></script>
     <script type="text/javascript" src="dist/index.entry.js"></script>
 </body>
 
